--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lesson-2_3</title>
-    <link rel="stylesheet" href="stayle/main.css">
-    <link rel="stylesheet" href="stayle/col.css]">
+    <meta charset="utf-8">
+    <title>animatsiya</title>
+    <link rel="stylesheet" href="style/main.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <div class="asosiy-div">
-        <div class="">
+    <div class="continer">
+        <div class="box-1">
+            <h1>SPRING FEVER</h1><span><b>ㅡㅡㅡㅡ</b></span>
+            <h5>Yillamco laboris dollor nisi ut<br>
+                aluiquep ex ea comoldo</h5>
+        </div>
+        <div class="box-2">
+            <p>Lorem ipsum dolor sit amet consectetur<br>
+                 adipisicing elit. Officia, nemo unde ratione<br>
+                  eum ullam consequatur dolore mollitia facilis<br>
+                   suscipit porro vel repellendus? Laboriosam, ut nulla<br>
+                    fugit reiciendis eaque hic asperiores?</p>
+        </div>
+       <div class="box-3">
+        <i class='bx bx-conversation'><b>12</b></i>
+        <i class='bx bxs-calendar'>03.12.2015</i>
        </div>
-    </div>
-    <div class="shijak">
-        <a href="#">sardor</a> 
-    </div>
+    </div> 
    
-
 </body>
 </html>
