--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>animatsiya</title>
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="stayle/main.css">
+    <link rel="stylesheet" href="stayle/col.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
