--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -7,30 +7,44 @@
     <title>Document</title>
     <link rel="stylesheet" href="stayle/main.css ">
     <link rel="stylesheet" href="stayle/col.css">
+    <link rel="stylesheet" href="stayle/botstrap.css">
 </head>
 <body>
-    <div class="video col-lg-12 col-md-3 col-xs-2">
+    <div class="video col-xs-2 col-md-3  col-lg-12">
+        
+          
+          <div class="dropdown" data-bs-theme="dark">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButtonDark" data-bs-toggle="dropdown" aria-expanded="false">
+              Dark dropdown
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButtonDark">
+              <li><a class="dropdown-item active" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Separated link</a></li>
+            </ul>
+          </div>
         <video src="img/qishloq.mp4"  controls class="video1"></video>
-        <p>2014년에 발간한 『사람으로 보는 우리 마을』의 1부 '시흥의 사람들'에서는 시흥 지역의 <br>
-            어르신을 대상으로 한 녹취록을 수록하였다. 이형수[군자동의 농촌 지도자],<br>
-            김규성[능곡동 자연 마을과 변화], 이영득[시흥문화원의 시작과 발전], <br>
-            전남훈[옛 시흥 지역과 정주 의식], 양요환[시흥의 복지와 미래 비전],<br>
-            이진규[과림동 부라위의 토박이] 등을 인터뷰, 구술시켜 녹취하였다. 2부 '시흥의 자연<br>
-            마을'에서는 과림동 부라위마을, 정왕동 봉화마을, 정왕동 평안촌[피양촌]을 조사한 <br>
-            내용을 수록하였다. 권말 부록에는 인문학 소풍, 정왕동의 옛 모습, 봉우재마을<br>
-             대동잔치 등을 DVD에 수록하였다. 2015년에 발간한 『사람으로 보는 우리 마을』의<br>
-             1부 '지역 개관'에서는 구술 대상 지역을 정리하였다. 2부 '시흥의 사람들'에서는 군자 <br>
-           지역과 염전을 주제로 이종철·성주안·천장호를, 군자면의 역사에서는 이형수·이강수·<br>
-          정한일·한상국을, 군자봉 성황제에서는 고덕영·황정학·한정현·당행복 등을 인터뷰,<br>
-          구술시켜 녹취하였다. 3부 '마을 조사'에서는 정제두(鄭齊斗) 선생 유허지인 화정동 <br>
-         가래울마을을 조사하여 수록하였다. 권말 부록으로 군자 지역의 다양한 사진을 수록하였다.<br>
-          2016년에 발간한 『사람으로 보는 우리 마을』의 1부 '지역 개관'에서는 시흥의 유래, <br>
-          시흥시 출범을 다루었다. 2부 '시흥의 사람들'에서는 군자동 도일시장의 노포(老鋪)를 주제로 <br>
-           김태봉·김학수·이영수를, 신현동[포동] 새우개마을과 어로(漁撈)를 주제로 안병권·이만규·<br>
-           김윤경을, 월곶동과 주변의 어로를 주제로 송선일을 인터뷰, 구술시켜 수록하였다. 3부 '<br>마을 
-           조사'에서는 도일시장의 마을 가꾸기 내용을 담았고, 부록에는 다양한 사진을 수록하였다.<br>
-<br>
-            [출처] 한국학중앙연구원 - 향토문화전자대전</p>
+        <p  class=" col-xs-2 col-md-3  col-lg-12">2014년에 발간한 『사람으로 보는 우리 마을』의 1부 '시흥의 사람들'에서는 시흥 지역의 
+            어르신을 대상으로 한 녹취록을 수록하였다. 이형수[군자동의 농촌 지도자],
+            김규성[능곡동 자연 마을과 변화], 이영득[시흥문화원의 시작과 발전],
+            전남훈[옛 시흥 지역과 정주 의식], 양요환[시흥의 복지와 미래 비전],
+            이진규[과림동 부라위의 토박이] 등을 인터뷰, 구술시켜 녹취하였다. 2부 '시흥의 자연
+            마을'에서는 과림동 부라위마을, 정왕동 봉화마을, 정왕동 평안촌[피양촌]을 조사한 
+            내용을 수록하였다. 권말 부록에는 인문학 소풍, 정왕동의 옛 모습, 봉우재마을
+             대동잔치 등을 DVD에 수록하였다. 2015년에 발간한 『사람으로 보는 우리 마을』의
+             1부 '지역 개관'에서는 구술 대상 지역을 정리하였다. 2부 '시흥의 사람들'에서는 군자 
+           지역과 염전을 주제로 이종철·성주안·천장호를, 군자면의 역사에서는 이형수·이강수·
+          정한일·한상국을, 군자봉 성황제에서는 고덕영·황정학·한정현·당행복 등을 인터뷰,
+          구술시켜 녹취하였다. 3부 '마을 조사'에서는 정제두 선생 유허지인 화정동 
+         가래울마을을 조사하여 수록하였다. 권말 부록으로 군자 지역의 다양한 사진을 수록하였다.
+          2016년에 발간한 『사람으로 보는 우리 마을』의 1부 '지역 개관'에서는 시흥의 유래, 
+          시흥시 출범을 다루었다. 2부 '시흥의 사람들'에서는 군자동 도일시장의 노포)를 주제로 
+           김태봉·김학수·이영수를, 신현동[포동] 새우개마을과 어로를 주제로 안병권·이만규·<br>
+           김윤경을, 월곶동과 주변의 어로를 주제로 송선일을 인터뷰, 구술시켜 수록하였다. 3부 '마을 
+           조사'에서는 도일시장의 마을 가꾸기 내용을 담았고, 부록에는 다양한 사진을 수록하였다.</p>
     </div>
    
 </body>
