--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stayle/main.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+   
+    
     <div class="chagi-sogi">
         <h1>너르베코브 사르도르</h1>
         <p> 저는 좋아하는 일을 하면 결국 꼭 성겅할 것'이라고 가르처 주신 부모님 밑에서 자라왔습니다.  <br>  
