--- a/kitob.html
+++ b/kitob.html
@@ -11,19 +11,29 @@
 </head>
 <body>
     <div class="kitob">
-        <p>살다 보면 정말로 힘든 일이 생겨 누군가와 이야기를 좀 나누고 시간을 함께 보내고 싶어<br>
-            때가 있지요? 이럴 때 여러분은 주로 어떤 사람을 찾게 되나요? 나보다 더 능력 있고 사<br>
-             명확하고 말 잘하는 친구를 찾게 되나요, 아니면 능력과 상관 없이 그냥 내 이야기를 내<br>
-              되어 따뜻하게 들어줄 것 같은 친구를 찾게 되나요? 저 같은 경우는 주로 후자를 선택<br>
-               것 같습니다. 물론 나보다 능력 있고 사리분별 잘하는 친구와 이야기를 하다 보면 현<br>
-                내가 가지고 있는 문제점을 객관적으로 잘 집어주기 때문에 도움이 되기도 하지만,<br>
-                 막상 정말로 힘든 일을 겪고 있을 때는 다소 단호한 이성적 조언들만 가지고는 왠지<br>
-                  2퍼센트 부족한 느낌이 듭니다. 아마도 그냥 옳은 말보다 지금 힘든 내 심정을 누<br>
+        <p>살다 보면 정말로 힘든 일이 생겨 누군가와 이야기를 좀 나누고 시간을 함께 보내고 싶어
+            때가 있지요? 이럴 때 여러분은 주로 어떤 사람을 찾게 되나요? 나보다 더 능력 있고 사
+             명확하고 말 잘하는 친구를 찾게 되나요, 아니면 능력과 상관 없이 그냥 내 이야기를 내
+              되어 따뜻하게 들어줄 것 같은 친구를 찾게 되나요? 저 같은 경우는 주로 후자를 선택
+               것 같습니다. 물론 나보다 능력 있고 사리분별 잘하는 친구와 이야기를 하다 보면 현
+                내가 가지고 있는 문제점을 객관적으로 잘 집어주기 때문에 도움이 되기도 하지만,
+                 막상 정말로 힘든 일을 겪고 있을 때는 다소 단호한 이성적 조언들만 가지고는 왠
+                  2퍼센트 부족한 느낌이 듭니다. 아마도 그냥 옳은 말보다 지금 힘든 내 심정을 누
                    좀 이해해주고 알아주었으면 하는 바람이 있는 것 같아요
 
-            Hayotda shunday paytlar bo'ladiki, hamma ishiz qiyinlashadi va  kimdir bilan gaplashib, birga vaqt o'tkazishni xohlaysiz, to'g'rimi? Bu holatda, odatda qanday insonni izlaysiz? Sizdan ko'ra qobiliyatli, faxmli va samimiy gapira oladigan do'stni qidirasizmi yoki qobiliyatidan qat'i nazar, yonizda turishga va sizni iliq tinglashga tayyor bo'lgan do'stni izlaysizmi? Men odatda ikkinchisini tanlayman. Albatta, mendan ko'ra qobiliyatli va aqlli do'stim bilan gaplashish foydalidir, chunki u menda mavjud muammolarni ob'ektiv ko'rsatib bera oladi. Ammo chindan ham qiyin vaziyatda bo'lganda, biron o'rinli va aqliy maslahatlarni olsak ham qalbimizda nimadir 2 foizgina yetishmaydi.  Ehtimol, to'g'ri gapdan ko'ra, qaysidir inson ayni paytdagi mening qiynalyatgan qalb holatimni biroz tushunisha olishligini umid qilamiz.
+            Hayotda shunday paytlar bo'ladiki, hamma ishiz qiyinlashadi va  kimdir bilan 
+            gaplashib, birga vaqt o'tkazishni xohlaysiz, to'g'rimi? Bu holatda, odatda qanday
+             insonni izlaysiz? Sizdan ko'ra qobiliyatli, faxmli va samimiy gapira oladigan 
+             do'stni qidirasizmi yoki qobiliyatidan qat'i nazar, yonizda turishga va sizni 
+             iliq tinglashga tayyor bo'lgan do'stni izlaysizmi? Men odatda ikkinchisini
+              tanlayman. Albatta, mendan ko'ra qobiliyatli va aqlli do'stim bilan gaplashish 
+              foydalidir, chunki u menda mavjud muammolarni ob'ektiv ko'rsatib bera oladi.
+               Ammo chindan ham qiyin vaziyatda bo'lganda, biron o'rinli va aqliy maslahatlarni
+                olsak ham qalbimizda nimadir 2 foizgina yetishmaydi.  Ehtimol, to'g'ri gapdan
+                 ko'ra, qaysidir inson ayni paytdagi mening qiynalyatgan qalb holatimni biroz
+                  tushunisha olishligini umid qilamiz.
             
-            @YOONJIANFAMILY</p>
+          </p>
     </div>
 </body>
 </html>
