--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -27,7 +27,7 @@
             </ul>
           </div>
         <video src="img/qishloq.mp4"  controls class="video1"></video>
-        <p  class=" col-xs-2 col-md-3  col-lg-12">2014년에 발간한 『사람으로 보는 우리 마을』의 1부 '시흥의 사람들'에서는 시흥 지역의 
+        <p  class="p1">2014년에 발간한 『사람으로 보는 우리 마을』의 1부 '시흥의 사람들'에서는 시흥 지역의 
             어르신을 대상으로 한 녹취록을 수록하였다. 이형수[군자동의 농촌 지도자],
             김규성[능곡동 자연 마을과 변화], 이영득[시흥문화원의 시작과 발전],
             전남훈[옛 시흥 지역과 정주 의식], 양요환[시흥의 복지와 미래 비전],
