--- a/kitob.html
+++ b/kitob.html
@@ -20,7 +20,8 @@
                  막상 정말로 힘든 일을 겪고 있을 때는 다소 단호한 이성적 조언들만 가지고는 왠
                   2퍼센트 부족한 느낌이 듭니다. 아마도 그냥 옳은 말보다 지금 힘든 내 심정을 누
                    좀 이해해주고 알아주었으면 하는 바람이 있는 것 같아요
-
+            <br>
+            <br>
             Hayotda shunday paytlar bo'ladiki, hamma ishiz qiyinlashadi va  kimdir bilan 
             gaplashib, birga vaqt o'tkazishni xohlaysiz, to'g'rimi? Bu holatda, odatda qanday
              insonni izlaysiz? Sizdan ko'ra qobiliyatli, faxmli va samimiy gapira oladigan 
@@ -31,9 +32,8 @@
                Ammo chindan ham qiyin vaziyatda bo'lganda, biron o'rinli va aqliy maslahatlarni
                 olsak ham qalbimizda nimadir 2 foizgina yetishmaydi.  Ehtimol, to'g'ri gapdan
                  ko'ra, qaysidir inson ayni paytdagi mening qiynalyatgan qalb holatimni biroz
-                  tushunisha olishligini umid qilamiz.
-            
-          </p>
+                  tushunisha olishligini umid qilamiz.</p>
+                  
     </div>
 </body>
 </html>
