--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,9 @@
     
     <div class="chagi-sogi">
         <h1>너르베코브 사르도르</h1>
+        <div class="">
+            <img src="img/sardor2.jpg" alt="" class=" sajin">
+        </div>
         <p> 저는 좋아하는 일을 하면 결국 꼭 성겅할 것'이라고 가르처 주신 부모님 밑에서 자라왔습니다.  
             부산대학교를 선택하기 전에 여러가지  대학교를 조사해 봤는데  부산대학교만큼 만족하는 대학
              를 찾지 못했습니다.내가 한국대학에서 IT전공분야에 공부하려고 하는 이유는 이 분야에서    
