--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=divesi-width, initial-scale=1.0">
-    <title>Animatsiya</title>
+    <title>porofil</title>
     <link rel="stylesheet" href="stayle/main.css">
     <link rel="stylesheet" href="stayle/col.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
