--- a/kitob.html
+++ b/kitob.html
@@ -36,9 +36,9 @@
                   <br>
                   "왜 그래"? Norbekov Sardor
                   <div class="yonji">
-                    <img src="img/photo_2023-01-24_22-56-13.jpg" alt="gudakkina" class="gudag">
+                    <img src="img/photo_2023-01-24_22-56-13.jpg" alt
+                        상대의 마음을 보는 것이다.="gudakkina" class="gudag">
                     <p>주위의 이들이 아프고 힘들어하는 모습을 보며 바로 판단하지 마십시오. ''왜 그래? 괜찮아, 걱정할 게 아니다, 울지말라, 잊으라, 마음을 평화롭게 하거라, '' 같은 위로의 말들도 중요하지만 모든 것의 때가 있다. 가끔은 그 말보다 중요한 것들이 있다. 
-                        상대의 마음을 보는 것이다.
                         다른 이들의 고통을 알기 위해 , 그대는 그들의 존재 속으로 들어가야 한다. 
                         그들의 몸, 감정, 정신 속에서 그 고통을 경험해야 한다. 구경꾼으로 바라보는 것은 아무런 도움을 주지 못한다. 
                         몸 안에서 몸을, 감정 안에서 감정을 살펴야 한다.
@@ -52,6 +52,7 @@
                         Siz tanadagi tanani va hissiyot ichidagi hissiyotlarni ko'ra bilishingiz lozim.
                         
                        </p>
+                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Kitesurfer_at_sunset%2C_Workum%2C_may_2017.jpg/534px-Kitesurfer_at_sunset%2C_Workum%2C_may_2017.jpg" alt="" class="quyosh">
                        <p>해가 지면 달이 떠오르듯
                         오늘 밤도 네 생각만 떠오른다.
                         내 마음엔 겨울이 온 것 같다..
