--- a/kitob.html
+++ b/kitob.html
@@ -52,7 +52,7 @@
                         Siz tanadagi tanani va hissiyot ichidagi hissiyotlarni ko'ra bilishingiz lozim.
                         
                        </p>
-                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Kitesurfer_at_sunset%2C_Workum%2C_may_2017.jpg/534px-Kitesurfer_at_sunset%2C_Workum%2C_may_2017.jpg" alt="" class="quyosh">
+                       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Kitesurfer_at_sunset%2C_Workum%2C_may_2017.jpg/534px-Kitesurfer_at_sunset%2C_Workum%2C_may_2017.jpg" alt="" class="quyosh gudag">
                        <p>해가 지면 달이 떠오르듯
                         오늘 밤도 네 생각만 떠오른다.
                         내 마음엔 겨울이 온 것 같다..
