--- a/kitob.html
+++ b/kitob.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <div class="kitob">
+        <img src="./img/photo_2023-01-27_23-06-32.jpg" alt=" manzra" class="manzra gudag">
+        <p>나를 향해 이러쿵저러쿵 하는 말들을 적당히 무시하고 사는 법을 익히십시오. 일일이 다 마음을 쓰면 불행해집니다. 행복해지고 싶다면 다른 사람이 나에 대해 어떻게 생각하는지 걱정할 시간에  나 자신이 진정 하고 싶은 것을 하십시오..
+<br>
+        Sizga qaratilgan turli gaplarga parvo qilmasdan yashashni o'rganing.  Agar barchasiga qayg'ursangiz oqibatda baxtsiz bo'lasiz. Agar baxtli bo'lishni istasangiz, boshqalar siz haqingizda nima deb o'ylashidan xavotirlanadigan lahzada , shunchaki o'zingiz chindan xohlaganingizni bajaring.
+         <hr>
+          </p>
         <p>살다 보면 정말로 힘든 일이 생겨 누군가와 이야기를 좀 나누고 시간을 함께 보내고 싶어
             때가 있지요? 이럴 때 여러분은 주로 어떤 사람을 찾게 되나요? 나보다 더 능력 있고 사
              명확하고 말 잘하는 친구를 찾게 되나요, 아니면 능력과 상관 없이 그냥 내 이야기를 내
@@ -33,9 +39,11 @@
                 olsak ham qalbimizda nimadir 2 foizgina yetishmaydi.  Ehtimol, to'g'ri gapdan
                  ko'ra, qaysidir inson ayni paytdagi mening qiynalyatgan qalb holatimni biroz
                   tushunisha olishligini umid qilamiz.</p>
+                  <hr>
                   <br>
                   "왜 그래"? Norbekov Sardor
                   <div class="yonji">
+                   
                     <img src="img/photo_2023-01-24_22-56-13.jpg" alt
                         상대의 마음을 보는 것이다.="gudakkina" class="gudag">
                     <p>주위의 이들이 아프고 힘들어하는 모습을 보며 바로 판단하지 마십시오. ''왜 그래? 괜찮아, 걱정할 게 아니다, 울지말라, 잊으라, 마음을 평화롭게 하거라, '' 같은 위로의 말들도 중요하지만 모든 것의 때가 있다. 가끔은 그 말보다 중요한 것들이 있다. 
