--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="profil">
             <div class="coll col-lg-4 .col-md-6  .col-xs-12">
                 <ul class="list">
-                    <li class="item"><a href="">Home</a></li>
+                    <li class="item"><a href="kitob.html">Home</a></li>
                     <li class="item"><a href="blog.html">Blog</a></li>
                     <li class="item"><a href="MyPortfolio.html">Portfolio</a></li>
                     <li class="item"><a href="kitob.html">About</a></li>
