--- a/kitob.html
+++ b/kitob.html
@@ -10,6 +10,15 @@
     
 </head>
 <body>
+    <div class="navbar">
+        <ul>
+            <li><a href="kitob.html">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="MyPortfolio.html">Portfolio</a></li>
+            <li><a href="kitob.html">About</a></li>
+        </ul>
+    </div>
+    
     <div class="kitob">
         <img src="./img/photo_2023-01-27_23-06-32.jpg" alt=" manzra" class="manzra gudag">
         <p>나를 향해 이러쿵저러쿵 하는 말들을 적당히 무시하고 사는 법을 익히십시오. 일일이 다 마음을 쓰면 불행해집니다. 행복해지고 싶다면 다른 사람이 나에 대해 어떻게 생각하는지 걱정할 시간에  나 자신이 진정 하고 싶은 것을 하십시오..
